--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -1,11 +1,16 @@
+//navbar
 .navbar {
   height: 10vh;
-  box-shadow: black;
+
   line-height: 10vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.735);
+  background-image: linear-gradient(
+    to right,
+    rgba(42, 32, 66, 0.479),
+    rgb(21, 18, 18)
+  );
 
   &__logo {
     font-size: 30px;
@@ -27,7 +32,8 @@
   }
 
   &__nav-links li:hover {
-    background-color: black;
+    background-color: white;
+    color: black;
   }
 }
 
@@ -53,7 +59,9 @@ button {
     top: 10px;
     transition: all 0.5s ease-in-out;
     width: 100%;
-    background-color: white;
+    background-color: black;
+    color: white;
+    z-index: 2;
   }
 
   ul li {
@@ -67,5 +75,116 @@ button {
     position: absolute;
     display: block;
     right: 20px;
+    color: white;
   }
+}
+
+// home.tsx
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+//home.tsx
+.home {
+  animation: fadeIn 0.2s;
+
+  height: 90vh;
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../screenshots/space.jpg");
+  display: flex;
+  flex-direction: column;
+
+  &__content {
+    color: white;
+    display: flex;
+    justify-content: center;
+    margin-top: 13%;
+  }
+
+  // arrow effect
+  .arrow {
+    opacity: 0;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform-origin: 50% 50%;
+    transform: translate3d(-50%, -50%, 0);
+    z-index: 1;
+  }
+
+  .arrow-first {
+    animation: arrow-movement 2s ease-in-out infinite;
+  }
+  .arrow-second {
+    animation: arrow-movement 1s ease-in-out infinite;
+  }
+
+  .arrow:before,
+  .arrow:after {
+    background: #fff;
+    content: "";
+    display: block;
+    height: 3px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 30px;
+  }
+
+  .arrow:before {
+    transform: rotate(45deg) translateX(-23%);
+    transform-origin: top left;
+  }
+
+  .arrow:after {
+    transform: rotate(-45deg) translateX(23%);
+    transform-origin: top right;
+  }
+
+  // Animation
+  @keyframes arrow-movement {
+    0% {
+      opacity: 0;
+      top: 45%;
+    }
+    70% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+
+  &__content h1 {
+    font-size: 3.2rem;
+    text-align: center;
+  }
+}
+
+.homeLinks {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+}
+
+.link__button {
+  color: white;
+  border: 2px solid white;
+  padding: 15px;
+  border-radius: 15px;
+  cursor: pointer;
+  font-size: 1.6rem;
+}
+
+.link__button:hover {
+  background-color: white;
+  color: black;
 }
