--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import "~react-image-gallery/styles/scss/image-gallery.scss";
 
 * {
   box-sizing: border-box;
