--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -20,3 +20,10 @@ button {
   border: none;
   background: none;
 }
+
+body {
+  background-color: #302b27;
+  background-image: url("../screenshots/space.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
