--- a/src/scss/_pages.scss
+++ b/src/scss/_pages.scss
@@ -10,13 +10,13 @@
 
 //home.tsx
 .home {
-  animation: fadeIn 0.2s;
+  animation: fadeIn 3s;
 
   height: 90vh;
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url("../screenshots/space.jpg");
+  background-color: #1b264f;
   display: flex;
   flex-direction: column;
 
@@ -91,6 +91,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   margin: auto;
 }
 
@@ -110,7 +111,9 @@
 
 // About page
 .about {
-  background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
+  // background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
+
+  background-color: #f5f3f5;
   height: 90vh;
 
   &__text {
@@ -131,11 +134,13 @@
 
   &__skills > li {
     padding: 10px;
-    border: 2px solid black;
+    border: 2px solid white;
     margin: 10px;
     font-size: 0.9rem;
     background-color: white;
     animation: fadeIn 3s;
+    border-radius: 10px;
+    border: 1px solid black;
   }
 }
 
@@ -155,8 +160,43 @@
 
 // Projects page
 .projects {
-  background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
+  // background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
+  background-color: #f5f3f5;
+  color: black;
+  animation: fadeIn 3s;
+
+  max-width: 80%;
+  margin: auto;
   &__title {
     text-align: center;
   }
+}
+
+.card {
+  &__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__button a {
+    padding: 10px;
+    background-color: #302b27;
+    border-radius: 20px;
+    margin: 10px;
+    color: white;
+    cursor: pointer;
+  }
+
+  &__button button {
+    color: white;
+    cursor: pointer;
+  }
+}
+
+#cardDescription {
+  background-color: #fff;
+  padding: 15px;
+  margin: auto;
+  max-width: 60%;
 }
