--- a/src/scss/_pages.scss
+++ b/src/scss/_pages.scss
@@ -167,6 +167,7 @@
 
   max-width: 80%;
   margin: auto;
+
   &__title {
     text-align: center;
   }
@@ -177,6 +178,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 10px;
   }
 
   &__button a {
@@ -199,4 +201,16 @@
   padding: 15px;
   margin: auto;
   max-width: 60%;
+}
+
+//contact page
+.contact {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 10%;
+  line-height: 3;
+  font-size: 1.2rem;
 }
