--- a/src/scss/_pages.scss
+++ b/src/scss/_pages.scss
@@ -111,19 +111,26 @@
 
 // About page
 .about {
-  // background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
-
-  background-color: #f5f3f5;
   height: 90vh;
+  background-color: #f5f3f5;
+  width: 80%;
+  margin: auto;
 
   &__text {
+    background-color: #fff;
+    max-width: 80%;
+    margin: auto;
+    font-size: 1.2rem;
   }
 
   &__title {
     text-align: center;
     font-size: 1.2rem;
     margin: 5px;
-    animation: 2s slide-right;
+  }
+
+  &__heading {
+    text-align: center;
   }
 
   &__skills {
@@ -136,7 +143,7 @@
     padding: 10px;
     border: 2px solid white;
     margin: 10px;
-    font-size: 0.9rem;
+    font-size: 1.2rem;
     background-color: white;
     animation: fadeIn 3s;
     border-radius: 10px;
@@ -213,4 +220,5 @@
   margin: 10%;
   line-height: 3;
   font-size: 1.2rem;
+  min-height: 80vh;
 }
